Further sexy-ness increases + added login requirement to add pages

--- a/tango_with_django_project/static/css/styleIndex.css
+++ b/tango_with_django_project/static/css/styleIndex.css
@@ -137,6 +137,13 @@ body {
 
 }
 
+.scores{
+  padding-right: 1rem;
+  padding-bottom: 0.5rem;
+  
+  
+}
+
 #profile-spacer{
   width: 100%;
   height:18rem;
