--- a/tango_with_django_project/templates/healthapple/index.html
+++ b/tango_with_django_project/templates/healthapple/index.html
@@ -35,7 +35,7 @@
     <!-- Modal Structure -->
   <div id="flesch-modal" class="modal">
     <div class="modal-content">
-      <h4>Flesch Scores</h4>
+      <h4>About Flesch Scores</h4>
       <br>
       <p>
         Flesch reading ease measures textual difficulty of a reading passage in English (note: in languages other than English, Flesch is seriously unreliable). The lower the score, the more difficult the text is. The Flesch readability score uses the sentence length (number of words per sentence) and the number of syllables per word in an equation to calculate the reading ease. Texts with a very high Flesch reading Ease score (about 100) are very easy to read, have short sentences and no words of more than two syllables. Usually, a reading ease of 60-70 is believed to be acceptable/ normal for web texts.
@@ -49,7 +49,7 @@
   
   <div id="polarity-modal" class="modal">
     <div class="modal-content">
-      <h4>Polarity Scores</h4>
+      <h4>About Polarity Scores</h4>
       <p>
         Flesch reading ease measures textual difficulty of a reading passage in English (note: in languages other than English, Flesch is seriously unreliable). The lower the score, the more difficult the text is. The Flesch readability score uses the sentence length (number of words per sentence) and the number of syllables per word in an equation to calculate the reading ease. Texts with a very high Flesch reading Ease score (about 100) are very easy to read, have short sentences and no words of more than two syllables. Usually, a reading ease of 60-70 is believed to be acceptable/ normal for web texts.
       </p>
@@ -61,7 +61,7 @@
   
   <div id="subjectivity-modal" class="modal">
     <div class="modal-content">
-      <h4>Subjectivity Scores</h4>
+      <h4>About Subjectivity Scores</h4>
       <p>
         Flesch reading ease measures textual difficulty of a reading passage in English (note: in languages other than English, Flesch is seriously unreliable). The lower the score, the more difficult the text is. The Flesch readability score uses the sentence length (number of words per sentence) and the number of syllables per word in an equation to calculate the reading ease. Texts with a very high Flesch reading Ease score (about 100) are very easy to read, have short sentences and no words of more than two syllables. Usually, a reading ease of 60-70 is believed to be acceptable/ normal for web texts.
       </p>
@@ -70,7 +70,5 @@
       <a href="#!" class=" modal-action modal-close waves-effect black-text waves-green btn-flat">Cool, Thanks!</a>
     </div>
   </div>
-  
-  
 
 {% endblock %}
