Asthetic improvements and random bug fixes

--- a/tango_with_django_project/templates/base.html
+++ b/tango_with_django_project/templates/base.html
@@ -15,7 +15,7 @@
 	  <script src="{% static "javascript/jsIndex.js" %}"></script>
 	  <link href="{% static "css/styleIndex.css" %}" rel="stylesheet" type="text/css" media="screen" />
   </head>
-  <body onload = "javascript:notificationDisplay({request.user.is_authenticated})" onscroll = "javascript:onScroll()">
+  <body onload = "javascript:notificationDisplay()" onscroll = "javascript:onScroll()">
       <div id = 'top_bar' class = 'green darken-2'></div>
       <div id = 'main_container'>
           <div id = 'top_bar_within'>
