--- a/tango_with_django_project/templates/healthapple/save_page.html
+++ b/tango_with_django_project/templates/healthapple/save_page.html
@@ -1,35 +1,32 @@
 {% extends 'base.html' %}
-
 {% block title %}Save Page{% endblock %}
 
 
 {% block body_block %}
 
 <div class = 'main_content_card shown' id = 'search_card'>
-    <div class = 'inner_main_content_card'>
-
-        <form role="form" onsubmit = "javascript:notificationEnabler('savedpage')" id="page_form" method="POST" action="/healthapple/save_page/">
-                    {% csrf_token %}
-					
-					<p>Add page to {{category}}</p>
-					
-                    {% for hidden in form.hidden_fields %}
-                        {{ hidden }}
-                    {% endfor %}
-
-                    {% for field in form.visible_fields %}
-                        {{ field.errors }}
-                        {{ field.help_text }}<br/>
-                        {{ field }}<br/>
-                    {% endfor %}
-
-                <br/>
-            <button class="btn btn-primary waves-effect grey darken-3 waves" type="submit" name="submit" value="Save">Save Page</button>
-        </form>
- 
-        <p>Category does not exist? <a href= "{% url 'add_category' %}">Add a new category</a></p>
-        
-</div></div>
- 
-
-        {% endblock %}
+  <div class = 'inner_main_content_card'>
+     <form role="form" id="page_form" method="POST" onsubmit = "javascript:notificationEnabler('savedpage')" action="/healthapple/save_page/">
+      {% csrf_token %}
+      {% for hidden in form.hidden_fields %}
+        {{ hidden }}
+      {% endfor %}
+      {% for field in form.visible_fields %}
+          {{ field.errors }}
+          {{ field.help_text }}<br/>
+          {{ field }}<br/>
+      {% endfor %}
+      <br/>
+      <button class="btn btn-primary waves-effect grey darken-3 waves" type="submit" name="submit" value="Save">Save Page</button>
+    </form>
+      <a class='dropdown-button waves-effect waves btn-flat btn-primary green-text' href='javascript:testing()' data-activates='dropdown1'>Category Selection</a>
+      <a class='waves-effect waves btn-flat btn-primary black-text' href= "{% url 'add_category' %}">Add a new category</a>
+      
+  </div>
+</div>
+<ul id='dropdown1' class='dropdown-content'>
+{% for cat in category %}
+     <li><a class='black-text' href="javascript:catSel('{{ cat }}')">{{ cat }}</a></li>
+{% endfor %}
+</ul>
+{% endblock %}
