Fixed HTML code formatting and added JS comments

--- a/tango_with_django_project/templates/registration/login.html
+++ b/tango_with_django_project/templates/registration/login.html
@@ -1,35 +1,25 @@
 {% extends "base.html" %}
-
 {% block title %} - login{% endblock %}
-
 {% block body_block %}
 <div class = 'main_content_card shown' id = 'search_card'>
-    <div class = 'inner_main_content_card'>
-	<div>
-		Login
-	</div>
-
-    <form onsubmit = "javascript:notificationEnabler('login')" method="post" action=".">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input class="btn btn-primary waves-effect grey darken-3 waves" type="submit" value="Log in" />
-        
-        <input type="hidden" name="next" value="{{ next }}" />
-		
-    </form>
-    
-	
-</div>
-
+   <div class = 'inner_main_content_card'>
+      <div>
+         Login
+      </div>
+      <form onsubmit = "javascript:notificationEnabler('login')" method="post" action=".">
+         {% csrf_token %}
+         {{ form.as_p }}
+         <input class="btn btn-primary waves-effect grey darken-3 waves" type="submit" value="Log in" />
+         <input type="hidden" name="next" value="{{ next }}" />
+      </form>
+   </div>
 </div>
 <br>
-
 <div class = 'main_content_card shown' id = 'search_card'>
-    <div class = 'inner_main_content_card'>
-      <div class = 'left'>No account?  </div><a href="{% url 'registration_register' %}" > <i class="material-icons right">person_add</i></a><br>
-      
-    </div>
+   <div class = 'inner_main_content_card'>
+      <div class = 'left'>No account?  </div>
+      <a href="{% url 'registration_register' %}" > <i class="material-icons right">person_add</i></a><br>
+   </div>
 </div>
 <br>
-
 {% endblock %}
