--- a/tango_with_django_project/templates/base.html
+++ b/tango_with_django_project/templates/base.html
@@ -1,41 +1,47 @@
 <!DOCTYPE html>
 {% load staticfiles %}
 <html lang"en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="theme-color" content="#2e7d32">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>HealthApple</title>
-    <meta name="description" content="Find out what clubs are busy tonight!">
-    <meta name="author" content="Bartek Juszczak">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-	  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css">
-  	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
-	  <script src="{% static "javascript/jsIndex.js" %}"></script>
-	  <link href="{% static "css/styleIndex.css" %}" rel="stylesheet" type="text/css" media="screen" />
-  </head>
-  <body onload = "javascript:notificationDisplay()" onscroll = "javascript:onScroll()">
+   <head>
+      <meta charset="utf-8">
+      <meta name="theme-color" content="#2e7d32">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <title>HealthApple</title>
+      <meta name="description" content="Find out what clubs are busy tonight!">
+      <meta name="author" content="Bartek Juszczak">
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css">
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
+      <script src="{% static "javascript/jsIndex.js" %}"></script>
+      <link href="{% static "css/styleIndex.css" %}" rel="stylesheet" type="text/css" media="screen" />
+   </head>
+   <body onload = "javascript:notificationDisplay()" onscroll = "javascript:onScroll()">
       <div id = 'top_bar' class = 'green darken-2'></div>
       <div id = 'main_container'>
-          <div id = 'top_bar_within'>
-              <div id = 'top_bar_dynamic'>
-                  <a href="/healthapple/"><div id = 'title'> HealthApple</div></a>
-                  <a href="javascript:toTop()"><div id = 'goUp'><i class="waves-effect waves material-icons md-18 right">arrow_upward</i></div></a>
-                  <a href="javascript:getSearchFocus()"><div id = 'goUp'><i class="waves-effect waves material-icons md-18 right">search</i></div></a>
-				  <div id = 'goUp' class = 'waves-effect waves right login'>
-					{% if user.is_authenticated %}
-					<a  href="{% url 'user_profile' %}"class="btn-flat">{{ user.username }}</a>
-					{% else %}
-					<a href="{% url 'auth_login' %}" class="btn-flat">LOGIN</a>
-					{% endif %}
-				  </div>
-              </div>
-          </div>
-          <div id = 'top_sep'>
-		  {% block body_block %}{% endblock %}
-		  <br>
-          </div>
+         <div id = 'top_bar_within'>
+            <div id = 'top_bar_dynamic'>
+               <a href="/healthapple/">
+                  <div id = 'title'> HealthApple</div>
+               </a>
+               <a href="javascript:toTop()">
+                  <div id = 'goUp'><i class="waves-effect waves material-icons md-18 right">arrow_upward</i></div>
+               </a>
+               <a href="javascript:getSearchFocus()">
+                  <div id = 'goUp'><i class="waves-effect waves material-icons md-18 right">search</i></div>
+               </a>
+               <div id = 'goUp' class = 'waves-effect waves right login'>
+                  {% if user.is_authenticated %}
+                  <a  href="{% url 'user_profile' %}"class="btn-flat">{{ user.username }}</a>
+                  {% else %}
+                  <a href="{% url 'auth_login' %}" class="btn-flat">LOGIN</a>
+                  {% endif %}
+               </div>
+            </div>
+         </div>
+         <div id = 'top_sep'>
+            {% block body_block %}{% endblock %}
+            <br>
+         </div>
       </div>
-  </body>
+   </body>
 </html>
