--- a/tango_with_django_project/templates/healthapple/user_profile.html
+++ b/tango_with_django_project/templates/healthapple/user_profile.html
@@ -1,59 +1,45 @@
 {% extends "base.html" %}
 {% load static %}
 {% block title %} - index{% endblock %}
-
 {% block body_block %}
 <div class = 'main_content_card shown' id = 'search_card'>
-    <div class = 'inner_main_content_card'>
-      
-	{% if user.is_authenticated %}
+   <div class = 'inner_main_content_card'>
+      {% if user.is_authenticated %}
       <img class="responsive-img profile-pic left" src="{% static "images/default-user.png" %}" >
       <div class = 'right user-details'>
-        <div class = "details-only">
-		  	<i class="material-icons profile">person</i>{{ user.username |title }}<br>
-		  	<i class="material-icons profile">email</i>{{ user.email |upper }}<br>
-
-      	</div>
-      	<br>
-
-	
-		  	<a onclick = "javascript:notificationEnabler('logout')" href="{% url 'auth_logout' %}?next=/healthapple/" class="waves-effect waves btn-flat black-text right">Logout</a>
-			  <a href="{% url 'auth_password_change' %}" class="waves-effect waves btn-flat black-text right">Change Password</a>
-		  	</div>
-		  	<div id = 'profile-spacer'></div>
-		  	
-
-<br><br><br>
+         <div class = "details-only">
+            <i class="material-icons profile">person</i>{{ user.username |title }}<br>
+            <i class="material-icons profile">email</i>{{ user.email |upper }}<br>
+         </div>
+         <br>
+         <a onclick = "javascript:notificationEnabler('logout')" href="{% url 'auth_logout' %}?next=/healthapple/" class="waves-effect waves btn-flat black-text right">Logout</a>
+         <a href="{% url 'auth_password_change' %}" class="waves-effect waves btn-flat black-text right">Change Password</a>
+      </div>
+      <div id = 'profile-spacer'></div>
+      <br><br><br>
       <ul class="collection">
-        
-		{% if category %}
-	{% for cat in category %}
-        <ul>	
-				<li><span class="title cat-name">{{ cat }}</span><br><br></li>
-                {% for page in pages %}
-                {% if page.category == cat %}
-                <li class="collection-item avatar">
-                  <i class="material-icons circle">pages</i>
-                  <span class="title">{{ page.title }}</span>
-                  <p>Flesch score: To be done<br>
-                     Polarity score: To be done<br>
-                     Subjectivity score: To be done
-                  </p>
-                  <a href="{{ page.url }}" class="secondary-content"><i class="material-icons">link</i></a>
-                  </li>
-                {% endif %}
-                {% endfor %}
-                </ul>
-
-	{% endfor %}
-    
-    {% endif %}	{% endif %}</ul>
-			</div>
-
-
-	
+         {% if category %}
+         {% for cat in category %}
+         <ul>
+            <li><span class="title cat-name">{{ cat }}</span><br><br></li>
+            {% for page in pages %}
+            {% if page.category == cat %}
+            <li class="collection-item avatar">
+               <i class="material-icons circle">pages</i>
+               <span class="title">{{ page.title }}</span>
+               <p>Flesch score: To be done<br>
+                  Polarity score: To be done<br>
+                  Subjectivity score: To be done
+               </p>
+               <a href="{{ page.url }}" class="secondary-content"><i class="material-icons">link</i></a>
+            </li>
+            {% endif %}
+            {% endfor %}
+         </ul>
+         {% endfor %}
+         {% endif %}	{% endif %}
+      </ul>
+   </div>
 </div>
-
 <br>
-
 {% endblock %}
